--- a/core/static/core/stylesheets/base.css
+++ b/core/static/core/stylesheets/base.css
@@ -43,7 +43,8 @@ img {vertical-align: middle;}
     width: 100%;
     position: relative;
     margin: auto;
-    height: 300px;
+    height: 40pc;
+    max-height: 340px;
     overflow: hidden;
     border-bottom: 1px solid #c2c2c2;
 }
@@ -75,71 +76,161 @@ img {vertical-align: middle;}
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
   background-color: #717171;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 2s;
-  animation-name: fade;
-  animation-duration: 2s;
+.text {
+    color: black;
+    font-weight: bolder;
+    font-size: 30px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+/** Slide 1 text **/
+.intro_text_line1{
+    background-color: rgba(255, 165, 0, 0.45);
+    color: #fafafa;
+    font-family: Optima, sans-serif;
+    font-weight: bolder;
+    font-size: 300%;
+    margin: -19% 60% 1% 15%;
+    padding-left: 20px
 }
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.intro_text_line2{
+    background-color: rgba(146, 184, 255, 0.45);
+    color: #616161;
+    font-family: Optima, sans-serif;
+    font-weight: bolder;
+    font-size: 290%;
+    margin: -2% 50% 1% 22%;
+    padding-left: 20px
+}
+/** Slide 2 text **/
+.dessert_text_line1{
+    background-color: rgba(195, 255, 146, 0.85);
+    color: #d500ff;
+    font-family: Marker Felt, fantasy;
+    font-weight: bolder;
+    font-size: 300%;
+    margin: -22% 45% 1% 25%;
+    padding-left: 50px;
 }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+.dessert_text_line2{
+    background-color: rgba(255, 146, 165, 0.92);
+    color: #18ff11;
+    font-family: Marker Felt, fantasy;
+    font-weight: bolder;
+    font-size: 350%;
+    margin: -1% 35% 1% 35%;
+    padding-left: 20px
 }
 
+.dessert_text_line3{
+    color: #ff9000;
+    font-family: Impact, fantasy;
+    font-weight: bolder;
+    font-size: 1400%;
+    margin: -22% 5% 1% 67%;
+}
+
+/** Slide 3 Text **/
+.vegan_text_line1 {
+    color: #d500ff;
+    font-family: Snell Roundhand, cursive;
+    font-weight: bolder;
+    font-size: 320%;
+    margin: -22% 4% 1% 40%;
+    padding-left: 50px;
+}
+
+.vegan_text_line2 {
+    color: #d500ff;
+    font-family: Snell Roundhand, cursive;
+    font-weight: bolder;
+    font-size: 340%;
+    margin: -2.5% 4% 1% 42%;
+    padding-left: 50px;
+}
+
+.vegan_text_line3 {
+    color: #d500ff;
+    font-family: Snell Roundhand, cursive;
+    font-weight: bolder;
+    font-size: 320%;
+    margin: -2.5% 0% 1% 40%;
+    padding-left: 50px;
+}
+
+/** Slide 4 Text **/
+.meat{
+    font-family: Impact, fantasy;
+    font-weight: bolder;
+    font-size: 390%;
+}
+
+.meat_text_line1{
+    color: white;
+    margin: -26% 0% 1% 30%;
+}
+.meat_text_line2{
+    color: orange;
+    margin: -7% 0% 1% 35%;
+}
+.meat_text_line3{
+    color: yellow;
+    margin: -7% 0% 1% 40%;
+}
+.meat_text_line4{
+    color: white;
+    margin: -7% 0% 1% 45%;
+}
+.meat_text_line5{
+    color: cornflowerblue;
+    margin: -7% 0% 1% 50%;
+}
+.meat_text_line6{
+    color: white;
+    margin: -7% 0% 1% 55%;
+}
+
+/**  Slide 5 text **/
+.drinks{
+    color: #6a0eff;
+    font-family: Brush Script MT, Brush Script Std, cursive;
+    font-size: 360%;
+}
+.drinks_text_line1{
+    margin: -26% 0% 1% 17%;
+}
+.drinks_text_line2{
+    margin: -2% 0% 1% 20%;
+}
+.drinks_text_line3{
+    margin: -2% 0% 1% 23%;
+}
+.drinks_text_line4{
+  margin: -2% 0% 1% 26%;
+}
 /*-----Slide Show End ----- */
-
-.featured_section {
-    height: 300px;
-    background-color: #6b6e69;
-}
 
 /* Featured Popular Trending New Catergory bottons css start*/
 .button_container{
@@ -181,21 +272,22 @@ img {vertical-align: middle;}
 
 .recipe_container{
     margin-top: 5px;
-    margin-left: 5px !important;
+    margin-left: 10px !important;
 }
 .recipe_block{
     overflow: hidden;
     background-color: white;
     border: 1px solid var(--secondary);
-    height: 300px;
-    width: 300px;
-    margin: 5px;
+    height: 320px;
+    width: 320px;
+    margin-left: 15px;
+    margin-top: 15px;
     border-radius: 10px;
 }
 .recipe_block_view{
     margin-left: -15px;
-    width: 325px;
-    height: 225px;
+    width: 360px;
+    height: 260px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom: 1px solid var(--secondary);
@@ -204,9 +296,9 @@ img {vertical-align: middle;}
 
 .recipe_block_view:hover{
     margin-left: -40px ;
-    margin-top: -100px;
-    width: 360px;
-    height: 250px;
+    margin-top: -150px;
+    width: 400px;
+    height: 300px;
 }
 .recipe_block_recipe_title{
     font-size: 15px;
