--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/bootstrap/custom/bootstrap.css' %}">
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/header.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/stylesheets/animate.css' %}">
 
 </head>
 
