--- a/core/static/core/stylesheets/header.css
+++ b/core/static/core/stylesheets/header.css
@@ -1,5 +1,5 @@
 :root{
-    --header_top_margin: 30px;
+    --header_top_margin: 10px;
     --header_obj_heights: 40px;
 }
 
@@ -14,6 +14,7 @@
 
 #logo{
     /*margin-left: 20px;*/
+    margin-top: -20px;
     padding: 10px;
     width: 75px;
     height: 90px;
