Updating Changes. Main changes done to dropdown styling

--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -28,9 +28,9 @@
 
                 <tr>
 
-                <th class = "dropdown_category_text">Country</th>
-                <th class = "dropdown_category_text">Meat Lover</th>
-                <th class = "dropdown_category_text">Drinks</th>
+                <th><a class = "dropdown_category_text" href="#">Country</a></th>
+                <th><a class = "dropdown_category_text" href="#">Meat Lover</a></th>
+                <th><a class = "dropdown_category_text" href="#">Drinks</a></th>
                 </tr>
                 <tr>
                 <td><a class = "menu_item" href="#">Turkey</a></td>
@@ -49,9 +49,9 @@
                 </tr>
 
                 <tr>
-                <th class = "dropdown_category_text">Vegetarian</th>
-                <th class = "dropdown_category_text">Dessert</th>
-                <th class = "dropdown_category_text">Vegan</th>
+                <th><a class = "dropdown_category_text" href="#">Vegetarian</a></th>
+                <th><a class = "dropdown_category_text" href="#">Dessert</a></th>
+                <th><a class = "dropdown_category_text" href="#">Vegan</a></th>
                 </tr>
                 <tr>
                 <td><a class = "menu_item" href="#">Cheesy</a></td>
