--- a/core/static/core/stylesheets/header.css
+++ b/core/static/core/stylesheets/header.css
@@ -101,6 +101,21 @@ th{
     padding: 10px;
 }
 
+th:hover{
+    background-color: rgba(255, 165, 0, 0.79);
+    padding: 10px;
+}
+
+td a {
+    display:block;
+    width:100%;
+}
+
+th a {
+    display:block;
+    width:100%;
+}
+
 .dropdown-menu .dropdown_category_text{
     text-align: left;
     color: white;
