--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -28,7 +28,7 @@
 
                 <tr>
 
-                <th><a class = "dropdown_category_text" href="#">Country</a></th>
+                <th><a class = "dropdown_category_text" href="#">Countries</a></th>
                 <th><a class = "dropdown_category_text" href="#">Meat Lover</a></th>
                 <th><a class = "dropdown_category_text" href="#">Drinks</a></th>
                 </tr>
