--- a/core/templates/core/main/content.html
+++ b/core/templates/core/main/content.html
@@ -42,18 +42,15 @@
               <div class="drinks_text_line4 drinks animated fadeInUp slow">Occasions</div>
           </div>
 
-          <!-- Next and previous buttons -->
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
 
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-        <span class="dot" onclick="currentSlide(4)"></span>
-        <span class="dot" onclick="currentSlide(5)"></span>
-    </div>
+{#    <div style="text-align:center">#}
+{#        <span class="dot" onclick="currentSlide(1)"></span>#}
+{#        <span class="dot" onclick="currentSlide(2)"></span>#}
+{#        <span class="dot" onclick="currentSlide(3)"></span>#}
+{#        <span class="dot" onclick="currentSlide(4)"></span>#}
+{#        <span class="dot" onclick="currentSlide(5)"></span>#}
+{#    </div>#}
 
     <div class="row">
         <div class="col-1 explore-select">
