--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -89,10 +89,10 @@
                     {{ request.user.username }}
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Signed in as <strong>{{ request.user.username }}</strong></a>
+                <a class="dropdown-item" href="{% url 'user_profile' request.user.username %}">Signed in as <strong>{{ request.user.username }}</strong></a>
                 <a class="dropdown-item" href="{% url 'user_profile' request.user.username %}">Your profile</a>
                 <a class="dropdown-item" href="{% url 'user_recipes' request.user.username %}">Your recipes</a>
-                  <a class="dropdown-item" href="{% url 'preferences' %}">Preferences</a>
+                <a class="dropdown-item" href="{% url 'preferences' %}">Preferences</a>
                 <a class="dropdown-item" href="{% url 'logout' %}">Sign out</a>
               </div>
             </div>
